--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "version": "6.3.0"
   },
   "dependencies": {
+    "@aws-amplify/api": "^5.0.3",
+    "@aws-amplify/pubsub": "^5.0.3",
     "hexo": "^6.3.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
